--- a/PosgrIQ/PosgrIQ.csproj
+++ b/PosgrIQ/PosgrIQ.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\AddEscuelasForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddEscuelasForm.Designer.cs">
+      <DependentUpon>AddEscuelasForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\EscuelasForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +90,9 @@
     <Compile Include="Forms\SplashForm.Designer.cs">
       <DependentUpon>SplashForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\AddEscuelasForm.resx">
+      <DependentUpon>AddEscuelasForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\EscuelasForm.resx">
       <DependentUpon>EscuelasForm.cs</DependentUpon>
     </EmbeddedResource>
