--- a/PosgrIQ/PosgrIQ.csproj
+++ b/PosgrIQ/PosgrIQ.csproj
@@ -132,6 +132,12 @@
     <Compile Include="Forms\ReglamentosForm.Designer.cs">
       <DependentUpon>ReglamentosForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\PropuestaDoctForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PropuestaDoctForm.Designer.cs">
+      <DependentUpon>PropuestaDoctForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Forms\AddEstudiantesDoctForm.resx">
       <DependentUpon>AddEstudiantesDoctForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -161,6 +167,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ProfesoresForm.resx">
       <DependentUpon>ProfesoresForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PropuestaDoctForm.resx">
+      <DependentUpon>PropuestaDoctForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
