--- a/PosgrIQ/PosgrIQ.csproj
+++ b/PosgrIQ/PosgrIQ.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\AddPropuestaDoctForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddPropuestaDoctForm.Designer.cs">
+      <DependentUpon>AddPropuestaDoctForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ConfiguracionForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +150,9 @@
     <Compile Include="Forms\PropuestaDoctForm.Designer.cs">
       <DependentUpon>PropuestaDoctForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\AddPropuestaDoctForm.resx">
+      <DependentUpon>AddPropuestaDoctForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ConfiguracionForm.resx">
       <DependentUpon>ConfiguracionForm.cs</DependentUpon>
     </EmbeddedResource>
