--- a/PosgrIQ/PosgrIQ.csproj
+++ b/PosgrIQ/PosgrIQ.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\AddPublicacionesDoctForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddPublicacionesDoctForm.Designer.cs">
+      <DependentUpon>AddPublicacionesDoctForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AddTesisDoctForm.cs">
       <SubType>Form</SubType>
     </Compile>
