--- a/PosgrIQ/PosgrIQ.csproj
+++ b/PosgrIQ/PosgrIQ.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddMatriculaDoctForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddMatriculaDoctForm.Designer.cs">
+      <DependentUpon>AddMatriculaDoctForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AddPonenciasDoctForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -148,6 +154,12 @@
     <Compile Include="Forms\PonenciasDoctForm.Designer.cs">
       <DependentUpon>PonenciasDoctForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MatriculaDoctForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MatriculaDoctForm.Designer.cs">
+      <DependentUpon>MatriculaDoctForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\SplashForm.cs">
@@ -242,6 +254,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\PonenciasDoctForm.resx">
       <DependentUpon>PonenciasDoctForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MatriculaDoctForm.resx">
+      <DependentUpon>MatriculaDoctForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
