--- a/PosgrIQ/PosgrIQ.csproj
+++ b/PosgrIQ/PosgrIQ.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\EstudiantesMaesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EstudiantesMaesForm.Designer.cs">
+      <DependentUpon>EstudiantesMaesForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AddMatriculaDoctForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -198,6 +204,9 @@
     <Compile Include="Forms\PublicacionesDoctForm.Designer.cs">
       <DependentUpon>PublicacionesDoctForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\EstudiantesMaesForm.resx">
+      <DependentUpon>EstudiantesMaesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddMatriculaDoctForm.resx">
       <DependentUpon>AddMatriculaDoctForm.cs</DependentUpon>
     </EmbeddedResource>
