--- a/PosgrIQ/PosgrIQ.csproj
+++ b/PosgrIQ/PosgrIQ.csproj
@@ -52,10 +52,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddTesisMaesForm.cs">
+    <Compile Include="Forms\AboutForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddTesisMaesForm.Designer.cs">
+    <Compile Include="Forms\AboutForm.Designer.cs">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\AddTesisMaesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddTesisMaesForm.Designer.cs">
       <DependentUpon>AddTesisMaesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\AddPropuestaMaesForm.cs">
@@ -264,13 +270,16 @@
     <Compile Include="Forms\PropuestaMaesForm.Designer.cs">
       <DependentUpon>PropuestaMaesForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="TesisMaes.cs">
+    <Compile Include="Forms\TesisMaes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TesisMaes.Designer.cs">
+    <Compile Include="Forms\TesisMaes.Designer.cs">
       <DependentUpon>TesisMaes.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddTesisMaesForm.resx">
+    <EmbeddedResource Include="Forms\AboutForm.resx">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AddTesisMaesForm.resx">
       <DependentUpon>AddTesisMaesForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddPropuestaMaesForm.resx">
@@ -385,7 +394,7 @@
     <EmbeddedResource Include="Forms\PropuestaMaesForm.resx">
       <DependentUpon>PropuestaMaesForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TesisMaes.resx">
+    <EmbeddedResource Include="Forms\TesisMaes.resx">
       <DependentUpon>TesisMaes.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
@@ -407,6 +416,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="posgriq.ico" />
+    <None Include="Resources\UISLogo.png" />
+    <None Include="Resources\logoEscuela.png" />
+    <None Include="Resources\logoPQ.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
