--- a/PosgrIQ/packages.config
+++ b/PosgrIQ/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EASendMail" version="7.3.1.2" targetFramework="net45" />
   <package id="GemBox.Spreadsheet" version="39.3.30.1189" targetFramework="net45" />
 </packages>
