--- a/PosgrIQ/PosgrIQ.csproj
+++ b/PosgrIQ/PosgrIQ.csproj
@@ -280,10 +280,10 @@
     <Compile Include="Forms\TesisMaes.Designer.cs">
       <DependentUpon>TesisMaes.cs</DependentUpon>
     </Compile>
-    <Compile Include="WaitingForm.cs">
+    <Compile Include="Forms\WaitingForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="WaitingForm.Designer.cs">
+    <Compile Include="Forms\WaitingForm.Designer.cs">
       <DependentUpon>WaitingForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Forms\AboutForm.resx">
@@ -407,7 +407,7 @@
     <EmbeddedResource Include="Forms\TesisMaes.resx">
       <DependentUpon>TesisMaes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="WaitingForm.resx">
+    <EmbeddedResource Include="Forms\WaitingForm.resx">
       <DependentUpon>WaitingForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
