--- a/PosgrIQ/PosgrIQ.csproj
+++ b/PosgrIQ/PosgrIQ.csproj
@@ -71,6 +71,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoClosingMessageBox.cs" />
+    <Compile Include="Forms\ConsultaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ConsultaForm.Designer.cs">
+      <DependentUpon>ConsultaForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AboutForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -321,6 +327,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddEstudianteMaesForm.resx">
       <DependentUpon>AddEstudianteMaesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ConsultaForm.resx">
+      <DependentUpon>ConsultaForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EstudiantesMaesForm.resx">
       <DependentUpon>EstudiantesMaesForm.cs</DependentUpon>
